fix: remove scrollbar style

--- a/src/index.scss
+++ b/src/index.scss
@@ -274,29 +274,24 @@ button {
 }
 
 /* Minimalist Apple-like Scrollbar */
-::-webkit-scrollbar {
-  width: 8px;
-  background: transparent;
-}
+// ::-webkit-scrollbar {
+//   width: 8px;
+//   background: transparent;
+// }
 
-::-webkit-scrollbar-thumb {
-  background: rgba(120, 120, 120, 0.25);
-  border-radius: 8px;
-  transition: background 0.2s;
-}
+// ::-webkit-scrollbar-thumb {
+//   background: rgba(120, 120, 120, 0.25);
+//   border-radius: 8px;
+//   transition: background 0.2s;
+// }
 
-::-webkit-scrollbar-thumb:hover {
-  background: rgba(120, 120, 120, 0.85);
-}
+// ::-webkit-scrollbar-thumb:hover {
+//   background: rgba(120, 120, 120, 0.85);
+// }
 
-::-webkit-scrollbar-corner {
-  background: transparent;
-}
-
-.recharts-wrapper:focus,
-.recharts-surface:focus {
-  outline: none;
-}
+// ::-webkit-scrollbar-corner {
+//   background: transparent;
+// }
 
 body.dark {
   /*========== Background Colors ==========*/
